fixing styling on mobile devices

--- a/static/CSS/style.css
+++ b/static/CSS/style.css
@@ -53,7 +53,7 @@
 }
 .button__portfolio-cta{
     width: 350px;
-    /* margin-bottom: 1rem; */
+    margin-bottom: 1rem;
     /* margin-top: 1rem; */
     border: none;
     border: 2px solid #fff;
@@ -73,16 +73,16 @@
         margin-top: 1.5rem;
     }
 	.hero-text p{
-        font-size: 2rem;
+        font-size: 1.4rem;
     }
     .button__portfolio-cta{
         margin-bottom: 0;
-        /* margin-top: 1rem; */
+        margin-top: 1rem;
         padding: 1rem 0 1rem 0;
         font-size: 1.3rem;
     }
     .white-space{
-        display: none;
+        height: 0px;
     }
 }
 
@@ -101,10 +101,8 @@
         height: 250px;
     }
     .button__portfolio-cta{
-        margin-bottom: 0;
-        margin-top: 1rem;
-        padding: 1rem 0 1rem 0;
-        font-size: 1.3rem;
+        width: 350px;
+        font-size: 1.5rem;
     }
 }
 
